<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#332973"
    tools:context=".common.Regist">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="192dp"
        android:layout_height="90dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="595dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="324dp"
        android:layout_height="49dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="556dp"
        android:text="@string/WorldCi"
        android:textAlignment="center"
        android:textColor="#EF3A01"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="407dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="279dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="461dp"
        android:background="?attr/actionBarItemBackground"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Name_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="410dp"
        android:layout_height="33dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="339dp"
        android:layout_marginEnd="268dp"
        android:layout_marginBottom="401dp"
        android:background="?attr/actionBarItemBackground"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Name_F_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.489" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="411dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="399dp"
        android:layout_marginEnd="290dp"
        android:layout_marginBottom="341dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.991"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="410dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="459dp"
        android:layout_marginEnd="279dp"
        android:layout_marginBottom="281dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="410dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="519dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="221dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <Button
        android:id="@+id/button2"
        android:layout_width="414dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="623dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="117dp"
        android:background="#EF3A01"
        android:text="@string/regist_bt1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767" />

    <Button
        android:id="@+id/button3"
        android:layout_width="410dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="683dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="57dp"
        android:background="?attr/actionBarItemBackground"
        android:text="@string/account_bt"
        android:textColor="#EF3A01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.829" />

</androidx.constraintlayout.widget.ConstraintLayout>