<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#332973"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="207dp"
        android:layout_height="134dp"

        android:layout_marginStart="76dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="410dp"
        app:layout_constraintBottom_toTopOf="@+id/wc_tv3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints,UnknownId" />

    <TextView
        android:id="@+id/wc_tv2"
        android:layout_width="223dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/WorldCi"
        android:textColor="#EF3A01"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="401dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="315dp"
        android:layout_marginEnd="290dp"
        android:layout_marginBottom="307dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="401dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="279dp"
        android:layout_marginBottom="247dp"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

    <Button
        android:id="@+id/button"
        android:layout_width="410dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="512dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="84dp"
        android:background="#EF3A01"

        android:text="@string/Enterbt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/bt_regist"
        android:layout_width="409dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="585dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="37dp"
        android:background="?attr/actionBarItemBackground"
        android:text="@string/regist_bt"
        android:textColor=" #EF3A01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />
</androidx.constraintlayout.widget.ConstraintLayout>