<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=" #332973">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="ExtraText">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/img1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:scaleType="center"
                    app:srcCompat="@drawable/mag" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="334dp"
                    android:layout_marginLeft="-500dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/img"
                    android:scaleType="fitCenter" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-250dp"
                    android:layout_marginTop="300dp"
                    android:background="@color/oronge"
                    android:text="@string/look_br"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50dp"
                    android:background="?attr/actionBarItemBackground"
                    android:text="@string/tv_Trend"
                    android:textColor="@color/oronge" />

                <Button
                    android:id="@+id/button13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"

                    android:background="?attr/actionBarItemBackground"
                    android:text="@string/tv_new_text"
                    android:textColor="@color/oronge" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:background="?attr/actionBarItemBackground"
                    android:text="@string/tv_me_movie"
                    android:textColor="@color/oronge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ludeff" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/trongame" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/sexenduc" />

                </ScrollView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/tv_movie"
                    android:textColor="@color/oronge"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/re3"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="170dp"
                    android:layout_marginTop="100dp"
                    android:background="?attr/actionBarItemBackground"
                    app:srcCompat="@drawable/play" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="50dp"
                    android:background="?attr/actionBarItemBackground"
                   />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="50dp"
                    android:background="?attr/actionBarItemBackground"
                     />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="50dp"
                    android:background="?attr/actionBarItemBackground"
                     />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="50dp"
                    android:background="?attr/actionBarItemBackground"
                   />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>